--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "家庭食物库存管理 Pro",
   "short_name": "食物库存",
   "description": "家庭食物库存、菜单规划和购物清单管理系统",
-  "start_url": "./food_inventory/",
+  "start_url": ".",
+  "scope": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#18181b",
